--- a/song9.html
+++ b/song9.html
@@ -51,7 +51,7 @@
   </div>
   <p class="message">
     “Tonight, we are young...” ✨<br>
-    So let's set the world on fire and live this night like there's no tomorrow. Thank you for making every moment with you glow a little brighter. 🌟
+    So let’s set the world on fire and live this moment like there’s no tomorrow. With you, every night becomes unforgettable.
   </p>
   <br>
   <a href="music.html" class="btn">← Back to Playlist</a>
